# claude-config

./: .env.enc  .gitignore  .pre-commit-config.yaml  .securityignore  .sync-manifest.json  CLAUDE.md  INFRASTRUCTURE.md  README.md  canonical.yaml  canonical.yaml.bak.20260110  gsd-file-manifest.json  heartbeat.json  memory.db  mkdocs.yml  plan.md  pyproject.toml  ruff.toml  settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
agents/: architecture-validator.md  gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md  readme-generator.md
checkpoints/: checkpoint-.claude-2026-01-24T11-35-34-536Z.json  checkpoint-.claude-2026-01-24T12-11-41-870Z.json  checkpoint-.claude-2026-01-24T12-23-29-958Z.json  checkpoint-.claude-2026-01-24T12-23-50-467Z.json  checkpoint-.claude-2026-01-24T12-24-09-275Z.json  checkpoint-.claude-2026-01-24T12-24-58-949Z.json  current-state.json
commands/: audit.md  auto-resolve.md  ci-status.md  fresh-start.md  github-sync.md  health.md  new-project.md  pipeline.gsd.md  pipeline.speckit.md  pipeline.status.md  refine-prompt.md  research-papers.md  research.md  spec-pipeline.md  speckit.autofix.md  speckit.implement-sync.md  speckit.taskstoissues.md  tips.md  verify-tasks.md
config/: confidence_gate.json
context_bundles/: 10_jan_session_f9932bd4-a411-46cb-9397-97fa81efe810.json  11_jan_session_f9932bd4-a411-46cb-9397-97fa81efe810.json  (+93 more)
coordination/: claims.json  (+4 more)
(+668 files in other folders)
