[project]
name = "claude-config"
version = "1.0.0"
description = "Claude Code configuration and scripts"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["import-untyped", "no-untyped-def"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportGeneralTypeIssues = "warning"

[tool.bandit]
exclude_dirs = ["tests", "__pycache__"]
skips = ["B101", "B603", "B607"]  # assert, subprocess, partial path

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
